--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 ODOO_HOST = localhost
 ODOO_PORT = 8069
-ODOO_MODULE_NAME = <your_module_name>
-LIB_NAME = <YourModuleName>
+JS_PATH = ona/static/src/js/dashboard_employee
+LIB_NAME = dashboardEmployee
